# RT-City

./: .gitignore  .gitmodules  README.md  ground_filter.py  plot_error.py  rotate_and_pub_right_image_compressed.py
carla_scripts/: manual_control_WATonoBus.py  rtCity_control.py
catkin_ws/src/det_3d/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/det_3d/include/det_3d/: aaroscpp_pcl_example.h  detection_node.h
catkin_ws/src/det_3d/src/: aaroscpp_hello_world.cpp  aaroscpp_pcl_example.cpp  detection_node.cpp
catkin_ws/src/fusion/: CMakeLists.txt  package.xml
catkin_ws/src/fusion/scripts/: fusion_node.cpp
catkin_ws/src/fusion/src/: fusion_node.cpp
catkin_ws/src/global_perception/: CMakeLists.txt  package.xml
catkin_ws/src/global_perception/msg/: ChildGlobalBBoxBuffer.msg  GlobalBBoxBuffer.msg
catkin_ws/src/global_perception/scripts/: BBoxPredictor.py  GlobalBBox.py  GlobalFuser.py  listener.py  talker.py
catkin_ws/src/lidar_detection/: CMakeLists.txt  package.xml
catkin_ws/src/lidar_detection/src/: pcl_publisher.cpp  roscpp_node.cpp
catkin_ws/src/orientation/: CMakeLists.txt  package.xml
catkin_ws/src/orientation/scripts/: Rotate.py
catkin_ws/src/perception/: CMakeLists.txt  package.xml
catkin_ws/src/perception/msg/: ObjectInstance.msg  ObjectsArray.msg
catkin_ws/src/perception/src/darknet-master/: LICENSE  Makefile  NOTES.txt  bad.list  darknet.py  darknet_video.py  uselib_center
catkin_ws/src/perception/src/darknet-master/include/: yolo_v2_class.hpp
catkin_ws/src/perception/src/darknet-master/src/: darknet.c  image_opencv.cpp  yolo_console_dll.cpp  yolo_v2_class.cpp
catkin_ws/src/range_vision_fusion/: CMakeLists.txt  package.xml
catkin_ws/src/range_vision_fusion/include/range_vision_fusion/: range_vision_fusion.h
catkin_ws/src/range_vision_fusion/launch/: range_vision_fusion.launch
catkin_ws/src/range_vision_fusion/src/: range_vision_fusion.cpp
catkin_ws/src/transform_publisher_infra/: CMakeLists.txt  package.xml
catkin_ws/src/transform_publisher_infra/Rviz/: infra_ground_plane_filtering.rviz  infra_visualize_recorded_data.rviz
catkin_ws/src/transform_publisher_infra/cfg/: calib_robosense.cfg
catkin_ws/src/transform_publisher_infra/launch/: transform_pub.launch
catkin_ws/src/transform_publisher_infra/src/utilities/: transform_points_infra.cpp
catkin_ws/src/transform_publisher_infra/transforms/: rotation_matrix_L_R_B.npy  transformation_matrix_G_T_L.npy  transformation_matrix_UTM_T_L.npy
other_scripts/: editRosbag.py
perception/: Dockerfile  README.md
perception/data/: aicity_track1_data.sh  koper_data.sh
