<?xml version="1.0"?>
<package format="2">
  <name>lidar_detection</name>
  <version>0.0.0</version>
  <description>basic lidar detection with pcl dependency</description>

  <maintainer email="parallels@todo.todo">parallels</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

  <export>

  </export>
</package>
