<?xml version="1.0"?>
<package format="2">
  <name>perception_prediction</name>
  <version>1.13.0</version>
  <description>The autoware_can_msgs package</description>
  <maintainer email="npbhatt@uwaterloo.ca">Neel Bhatt</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
